src/plasmaquick/dialog.cpp
@@ -766,20 +766,20 @@ void DialogPrivate::applyType()
 #endif
     } else {
         q->setFlags(Qt::FramelessWindowHint | q->flags());
+    }
 
 #if HAVE_KWAYLAND
-        // Only possible after setup
-        if (shellSurface) {
-            if (q->flags() & Qt::WindowStaysOnTopHint) {
-                shellSurface->setRole(KWayland::Client::PlasmaShellSurface::Role::Panel);
-                shellSurface->setPanelBehavior(KWayland::Client::PlasmaShellSurface::PanelBehavior::WindowsGoBelow);
-            } else {
-                shellSurface->setRole(KWayland::Client::PlasmaShellSurface::Role::Normal);
-                shellSurface->setPanelBehavior(KWayland::Client::PlasmaShellSurface::PanelBehavior::AlwaysVisible);
-            }
+    // Only possible after setup
+    if (shellSurface) {
+        if (q->flags() & Qt::WindowStaysOnTopHint) {
+            shellSurface->setRole(KWayland::Client::PlasmaShellSurface::Role::Panel);
+            shellSurface->setPanelBehavior(KWayland::Client::PlasmaShellSurface::PanelBehavior::WindowsGoBelow);
+        } else {
+            shellSurface->setRole(KWayland::Client::PlasmaShellSurface::Role::Normal);
+            shellSurface->setPanelBehavior(KWayland::Client::PlasmaShellSurface::PanelBehavior::AlwaysVisible);
         }
-#endif
     }
+#endif
 
     // an OSD can't be a Dialog, as qt xcb would attempt to set a transient parent for it
     // see bug 370433
